--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,19 @@
 --- #YAML:1.0
-name:                Object-Previous
-version:             1.1
-abstract:            ~
-license:             ~
-author:              
+name:               Object-Previous
+version:            1.1005
+abstract:           ~
+author:
     - Paul Miller <jettero@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+requires:  {}
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
