--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,27 @@
 --- #YAML:1.0
 name:               Object-Previous
-version:            1.1005
+version:            1.1007
 abstract:           ~
 author:
     - Paul Miller <jettero@cpan.org>
-license:            unknown
+license:            Perl Artistic
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
-requires:  {}
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    perl:  5.006001
+resources:
+    repository:  http://github.com/jettero/object--previous/
 no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
+keywords:
+    - object
+    - strange
